--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Applicant/List.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Applicant/List.cshtml
@@ -70,14 +70,14 @@
 
                     $.each(data, function (i, e) {
                         if (e.isSatisfied) {
-                            $('#matchingDetailBody').html($('#matchingDetailBody').html() + "<tr style='color: green'>"
+                            $('#matchingDetailBody').html($('#matchingDetailBody').html() + "<tr>"
                                                                                             + "<td>"
                                                                                                 + e.columnName
                                                                                             + "</td>"
                                                                                             + "<td>"
                                                                                                 + e.jobInfo
                                                                                             + "</td>"
-                                                                                            + "<td>"
+                                                                                            + "<td style='color: green'>"
                                                                                                 + e.applicantInfo
                                                                                             + "</td>"
                                                                                             + "<td>"
@@ -86,14 +86,14 @@
                                                                                         + "</tr>");
                         }
                         else {
-                            $('#matchingDetailBody').html($('#matchingDetailBody').html() + "<tr style='color: red'>"
+                            $('#matchingDetailBody').html($('#matchingDetailBody').html() + "<tr>"
                                                                                             + "<td>"
                                                                                                 + e.columnName
                                                                                             + "</td>"
                                                                                             + "<td>"
                                                                                                 + e.jobInfo
                                                                                             + "</td>"
-                                                                                            + "<td>"
+                                                                                            + "<td style='color: red'>"
                                                                                                 + e.applicantInfo
                                                                                             + "</td>"
                                                                                             + "<td>"
@@ -147,13 +147,8 @@
                         $('#ungvien1').html(data.applicantname1);
                         $('#ungvien2').html(data.applicantname2);
 
-                        var percent1 = 0;
-                        var percent2 = 0;
-
                         $.each(data.profile1, function (i, e) {
                             if (data.profile1[i].isSatisfied && data.profile2[i].isSatisfied) {
-                                percent1 += data.profile1[i].tyle;
-                                percent2 += data.profile2[i].tyle;
                                 $('#matchingDetailBody2').html($('#matchingDetailBody2').html() + "<tr>"
                                                                                                 + "<td>"
                                                                                                     + data.profile1[i].columnName
@@ -172,7 +167,6 @@
                                                                                                 + "</td>"
                                                                                             + "</tr>");
                             } else if (data.profile1[i].isSatisfied && !data.profile2[i].isSatisfied) {
-                                percent1 += data.profile1[i].tyle;
                                 $('#matchingDetailBody2').html($('#matchingDetailBody2').html() + "<tr>"
                                                                                                 + "<td>"
                                                                                                     + data.profile1[i].columnName
@@ -191,7 +185,6 @@
                                                                                                 + "</td>"
                                                                                             + "</tr>");
                             } else if (!data.profile1[i].isSatisfied && data.profile2[i].isSatisfied) {
-                                percent2 += data.profile2[i].tyle;
                                 $('#matchingDetailBody2').html($('#matchingDetailBody2').html() + "<tr>"
                                                                                                 + "<td>"
                                                                                                     + data.profile1[i].columnName
@@ -230,56 +223,6 @@
                             }
                             
                         });
-
-                        if (percent1 > percent2) {
-                            $('#matchingDetailBody2').html($('#matchingDetailBody2').html() + "<tr>"
-                                                                                                + "<td colspan = 2 style='text-align: right;'>"
-                                                                                                    + "Tổng:"
-                                                                                                + "</td>"
-                                                                                                + "<td style='color: green'>"
-                                                                                                    + percent1 + "%"
-                                                                                                + "</td>"
-                                                                                                + "<td style='color: red'>"
-                                                                                                    + percent2 + "%"
-                                                                                                + "</td>"
-                                                                                                + "<td>"
-                                                                                                    + "100%"
-                                                                                                + "</td>"
-                                                                                            + "</tr>");
-                        }
-                        else if (percent1 < percent2) {
-                            $('#matchingDetailBody2').html($('#matchingDetailBody2').html() + "<tr>"
-                                                                                                + "<td colspan = 2 style='text-align: right;'>"
-                                                                                                    + "Tổng:"
-                                                                                                + "</td>"
-                                                                                                + "<td style='color: red'>"
-                                                                                                    + percent1 + "%"
-                                                                                                + "</td>"
-                                                                                                + "<td style='color: green'>"
-                                                                                                    + percent2 + "%"
-                                                                                                + "</td>"
-                                                                                                + "<td>"
-                                                                                                    + "100%"
-                                                                                                + "</td>"
-                                                                                            + "</tr>");
-                        }
-                        else {
-                            $('#matchingDetailBody2').html($('#matchingDetailBody2').html() + "<tr>"
-                                                                                                + "<td colspan = 2 style='text-align: right;'>"
-                                                                                                    + "Tổng:"
-                                                                                                + "</td>"
-                                                                                                + "<td style='color: green'>"
-                                                                                                    + percent1 + "%"
-                                                                                                + "</td>"
-                                                                                                + "<td style='color: green'>"
-                                                                                                    + percent2 + "%"
-                                                                                                + "</td>"
-                                                                                                + "<td>"
-                                                                                                    + "100%"
-                                                                                                + "</td>"
-                                                                                            + "</tr>");
-                        }
-                        
 
                         $('#modal-show-matching-detail-2').modal('show');
                     }
