Job/Update.cshtml + All Title

--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Advertise/AdvertiseRequestList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Advertise/AdvertiseRequestList.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "AdvertiseRequestList";
+    ViewBag.Title = "Danh sách mua gói quảng cáo";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
