--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Advertise/AdvertiseRequestListRecruiter.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Advertise/AdvertiseRequestListRecruiter.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "AdvertiseRequestList";
+    ViewBag.Title = "Danh sách gói quảng cáo đã mua";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
