--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/AppliedJobList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/AppliedJobList.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "MyJob";
+    ViewBag.Title = "Tình trạng ứng tuyển";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
