--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/AppliedList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/AppliedList.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "MyJob";
+    ViewBag.Title = "Công việc của tôi";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
