--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/Create.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model JobSearchingSystem.Models.JobCreateModel
 
 @{
-    ViewBag.Title = "CreateJobPosting";
+    ViewBag.Title = "Tạo công việc";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
