--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/Detail.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/Detail.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Thông tin công việc";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
