--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/SearchJobseekerMatching.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/SearchJobseekerMatching.cshtml
@@ -1,7 +1,7 @@
 ﻿@model JobSearchingSystem.Models.JobseekerList
 
 @{
-    ViewBag.Title = "ManageAppliedRequest";
+    ViewBag.Title = "Danh sách ứng viên phù hợp";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
