--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/JobPackage/Choose.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/JobPackage/Choose.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "BuyJobPackage";
+    ViewBag.Title = "Chọn gói công việc";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 @model JobSearchingSystem.Models.JobPackageViewModels
