--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/JobPackage/JobPackageRequestList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/JobPackage/JobPackageRequestList.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "JobPackageRequestList";
+    ViewBag.Title = "Danh sách mua gói công việc";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
