--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/JobPackage/JobPackageRequestListRecruiter.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/JobPackage/JobPackageRequestListRecruiter.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "AdvertiseRequestList";
+    ViewBag.Title = "Danh sách gói công việc đã mua";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
@@ -47,7 +47,7 @@
 
 <div class="page-content" style="padding: 20px 100px 20px 100px;background-color: #dedede">
     <div class="col-lg-9 panel panel-default">
-        <h3 style="font-weight:600;text-align:center">Danh sách gói quảng cáo đã mua </h3>
+        <h3 style="font-weight:600;text-align:center">Danh sách gói công việc đã mua </h3>
         <br />
 
 
