--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Message/Detail.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Message/Detail.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "ViewMessage";
+    ViewBag.Title = "Chi tiết tin nhắn";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 @model JobSearchingSystem.Models.JMessageDetailViewModel
