--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Message/List.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Message/List.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "ManageMessage";
+    ViewBag.Title = "Danh sách tin nhắn";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
