--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Profile/List.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Profile/List.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Manage Profile";
+    ViewBag.Title = "Hồ sơ của tôi";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
