--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Report/Index.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Report/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Danh sách Report";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 @model JobSearchingSystem.Models.ReportViewModels
