--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/Create.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model JobSearchingSystem.Models.TopCreateViewModel
 
 @{
-    ViewBag.Title = "CreateTopic";
+    ViewBag.Title = "Tạo bài viết";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
