--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/Detail.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/Detail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model JobSearchingSystem.Models.TopicItem
 
 @{
-    ViewBag.Title = "TopicItem";
+    ViewBag.Title = "Xem bài viết";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
