--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Applicant/List.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Applicant/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<JobSearchingSystem.Models.ApplicantItem>
 
 @{
-    ViewBag.Title = "ManageAppliedRequest";
+    ViewBag.Title = "Danh sách ứng viên";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
