--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/List.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/List.cshtml
@@ -2,7 +2,7 @@
 @using System.Text.RegularExpressions
 
 @{
-    ViewBag.Title = "Topic";
+    ViewBag.Title = "Danh sách bài viết";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
