--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/OwnList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/OwnList.cshtml
@@ -2,7 +2,7 @@
 @using System.Text.RegularExpressions
 
 @{
-    ViewBag.Title = "OwnList";
+    ViewBag.Title = "Bài viết của tôi";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
