--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/PendingList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/PendingList.cshtml
@@ -2,7 +2,7 @@
 @using System.Text.RegularExpressions
 
 @{
-    ViewBag.Title = "PendingList";
+    ViewBag.Title = "Quản lý bài viết";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
