--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/Update.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@model JobSearchingSystem.Models.TopCreateViewModel
 
 @{
-    ViewBag.Title = "UpdateTopic";
+    ViewBag.Title = "Cập nhật bài viết";
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
